--- a/Hemsidan om mig/Home.html
+++ b/Hemsidan om mig/Home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LudvigAndersson</title>
     <link rel="stylesheet" href="Style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -15,5 +16,16 @@
             <li><a href="#">GUMMY BEAR MOVIE</a></li>
         </ul>
     </nav>
+
+    <table>
+        <td>
+            <tr>
+                <h3>
+                    Jag gillar hästar
+                </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veniam ipsum, tempore adipisci recusandae quidem porro vitae consequuntur, enim ratione aspernatur! Voluptatibus laboriosam reprehenderit cum provident. Dolore beatae iusto error!</p>
+            </tr>
+        </td>
+    </table>
 </body>
 </html>
