--- a/Hemsidan om mig/Home.html
+++ b/Hemsidan om mig/Home.html
@@ -13,19 +13,19 @@
         <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#">GUMMY BEAR MOVIE</a></li>
+            <li><a href="https://www.youtube.com/watch?v=astISOttCQ0&ab_channel=icanrockyourworld">GUMMY BEAR MOVIE</a></li>
         </ul>
     </nav>
+     <p>
+         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga odit, sapiente unde rerum aliquid magni eos dolores, animi voluptatum tempora reprehenderit, sequi temporibus accusamus magnam iste! Maiores voluptatum aspernatur. 
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint iusto autem itaque voluptatibus distinctio dolorem alias ratione ea eveniet exercitationem! Quidem nihil tempora iste nemo qui numquam molestiae nostrum animi?
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia deleniti in rerum sunt ullam, consequatur explicabo accusantium nobis ut, minus temporibus! Dicta sint placeat deserunt! Nostrum blanditiis odit repellat officia.
+         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, debitis cumque corporis nulla non, quisquam repellendus tempore magni, laboriosam voluptatem a nostrum veritatis reiciendis. Voluptas voluptate veniam obcaecati aut porro?
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque illo doloribus explicabo reprehenderit!   
+        </p>
+            
+    
+    <footer><h3>Created By Ludvig Andersson</h3></footer>
 
-    <table>
-        <td>
-            <tr>
-                <h3>
-                    Jag gillar hästar
-                </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veniam ipsum, tempore adipisci recusandae quidem porro vitae consequuntur, enim ratione aspernatur! Voluptatibus laboriosam reprehenderit cum provident. Dolore beatae iusto error!</p>
-            </tr>
-        </td>
-    </table>
 </body>
 </html>
