--- a/Hemsidan om mig/Home.html
+++ b/Hemsidan om mig/Home.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header class="apa">
       <nav>
@@ -37,12 +38,15 @@
     <section class="pictures">
       <figure>
         <img src="Bilder/Värmdö1.jpeg" />
+        <figcaption>Hemmesta Värmdö</figcaption>
       </figure>
       <figure>
-        <img src="Bilder/Värmdö1.jpeg" />
+        <img src="Bilder/Värmdö2.jpg" />
+        <figcaption>Hamnen Värmdö</figcaption>
       </figure>
       <figure>
-        <img src="Bilder/Värmdö1.jpeg" />
+        <img src="Bilder/Värmdö3.jpg" />
+        <figcaption>Grisslinge-Havsbad Värmdö</figcaption>
       </figure>
     </section>
 
