--- a/Hemsidan om mig/Home.html
+++ b/Hemsidan om mig/Home.html
@@ -17,7 +17,7 @@
 
   <body>
     <header class="apa">
-      <nav>
+      <nav class="nav1">
         <label>LUDVIG ANDERSSON</label>
         <ul>
           <li>
@@ -25,10 +25,9 @@
               >HOME</a
             >
           </li>
-          <li><a href="#">ABOUT ME</a></li>
           <li>
-            <a href="http://127.0.0.1:5500/Hemsidan%20om%20mig/Aids.html"
-              >CHECKYCHICKEN</a
+            <a href="http://127.0.0.1:5500/Hemsidan%20om%20mig/DameDame.html"
+              >DAME DAME</a
             >
           </li>
         </ul>
@@ -37,20 +36,33 @@
 
     <section class="pictures">
       <figure>
-        <img src="Bilder/Värmdö1.jpeg" />
-        <figcaption>Hemmesta Värmdö</figcaption>
+        <a
+          href="https://earth.google.com/web/search/hemmesta+centrum/@59.32300697,18.48863442,15.41735065a,0d,60y,145.1298438h,85.10977232t,0r/data=CigiJgokCTQ0dL2yTTRAETM0dL2yTTTAGfw7waSsmStAIY5ZYV2PA1bAIhoKFm5uZUhMZW9nNmh6OEtZWWFkalliN3cQAg"
+        >
+          <img src="Bilder/Värmdö1.jpeg" alt="Hemmesta Värmdö" />
+          <figcaption>Hemmesta Värmdö</figcaption>
+        </a>
       </figure>
       <figure>
-        <img src="Bilder/Värmdö2.jpg" />
-        <figcaption>Hamnen Värmdö</figcaption>
+        <a
+          href="https://earth.google.com/web/@59.32365999,18.38084208,3.28987436a,0d,60y,154.30739303h,94.17248129t,0r/data=IhoKFnEzVWhoX1g5RlV2OEg4VXl3TDg0NEEQAg"
+        >
+          <img src="Bilder/Värmdö2.jpg" alt="Hamnen Värmdö" />
+          <figcaption>Hamnen Värmdö</figcaption>
+        </a>
       </figure>
       <figure>
-        <img src="Bilder/Värmdö3.jpg" />
-        <figcaption>Grisslinge-Havsbad Värmdö</figcaption>
+        <a
+          href="https://earth.google.com/web/search/Grisslinge+Havsbad,+V%c3%a4rmd%c3%b6/@59.31310981,18.45005513,10.87183285a,0d,60y,172.47952533h,82.04990791t,0r/data=CigiJgokCbvoxbBtqU1AEYo7kN9qqU1AGd22qoSKYTJAIeRa2gV6YTJAIhoKFi1nNnI5cFBpSVdGUmdTVkFIYUlZSlEQAg"
+        >
+          <img src="Bilder/Värmdö3.jpg" alt="Grisslinge Havsbad" />
+          <figcaption>Grisslinge-Havsbad Värmdö</figcaption>
+        </a>
       </figure>
     </section>
 
-    <div class="p">
+    <nav class="p">
+      <h2>Om mig</h2>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga odit,
         sapiente unde rerum aliquid magni eos dolores, animi voluptatum tempora
@@ -68,10 +80,19 @@
         obcaecati aut porro? Lorem ipsum dolor sit amet, consectetur adipisicing
         elit. Adipisci atque illo doloribus explicabo reprehenderit!
       </p>
-    </div>
+    </nav>
 
-    <div class="footer">
-      <label class="footer2"><h3>Created By Ludvig Andersson</h3></label>
-    </div>
+    <footer>
+      <div class="footer">
+        <div class="inner_footer">
+          <div class="footer_third">
+            <h1 class="kontaktuppgifter">KontaktUppgifter</h1>
+            <a class="telefonnummer">0725331918</a>
+            <h1 class="gjordav">Gjord av Ludvig Andersson</h1>
+            <a href="#top" class="toppen">Ta mig till Toppen</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
